[tool.poetry]
name = "farm-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "farm_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
fastapi-csrf-protect = "^0.3.0"
motor = "^3.1.2"
pyjwt = "^2.7.0"
passlib = "^1.7.4"
python-decouple = "^3.8"
dnspython = "^2.3.0"
gunicorn = "^20.1.0"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
